src/objects/PYME001_Cuadro_Accionario__c.object
<CustomObject>
    <description>Nuevo objeto Cuadro Accionario para PYME</description>
    <fields>
        <fullName>MX_PYME_Reporte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporte PyME</label>
        <referenceTo>MX_PyME_Reporte__c</referenceTo>
        <relationshipLabel>Cuadros Accionarios</relationshipLabel>
        <relationshipName>Cuadros_Accionarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_br_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuadros Accionarios</relationshipLabel>
        <relationshipName>Cuadros_Accionarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_pr_Porcentaje__c</fullName>
        <description>Nuevo campo Porcentaje para pyme</description>
        <label>Porcentaje</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Cuadro Accionario</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PYME_pr_Porcentaje__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del Cuadro Accionario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cuadros Accionarios</pluralLabel>
    <recordTypes>
        <fullName>PYME_tre_Cuadro_Accionario</fullName>
        <active>true</active>
        <label>Cuadro Accionario PyME</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>